Intellij auto code cleanup